fix: confirm modal not centered

--- a/src/styles/Confirm.css
+++ b/src/styles/Confirm.css
@@ -7,8 +7,9 @@
     height: 100%;
     width: 100%;
     align-content: center;
-    justify-items: center;
+    align-items: center;
     justify-content: center;
+    justify-items: center;
     align-self: center;
 }
 
