--- a/src/styles/ExerciseSession.css
+++ b/src/styles/ExerciseSession.css
@@ -46,12 +46,15 @@ input:focus {
 }
 
 .row {
+    display: flex;
+    flex-direction: column;
     border-radius: 10px;
     margin-bottom: 10px;
     padding-block: 10px;
     width: 100%;
     background-color: rgb(47, 46, 46);
     box-shadow: 0px 0px 8px #181717;
+    align-items: center;
 }
 
 .row .add-set-btn {
@@ -73,7 +76,8 @@ input:focus {
     height: fit-content;
     padding: 2px;
     margin: -1px;
-    justify-content: space-around;
+    justify-items: c;
+    justify-content: space-between;
 }
 
 .bottom-row {
